<package>
  <name>xamlamoveit_server</name>
  <version>1.0.0</version>
  <description>The xamlamoveit_server package</description>
  <maintainer email="andre.lemme@xamla.com">Xamla Team</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>xamlamoveit_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
